--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <div class="header"><h2>Tic Tac Toe</h2></div>
+    <div class="content">
+    </div>
 </body>
 </html>
