Refactor to allow cpu auto play

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <div class="header"><h2>Tic Tac Toe</h2></div>
     <div class="content">
+        <div class="game-prompts"> X </div>
+        <div class="game-space"></div>
     </div>
 </body>
 </html>
