--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="./script.js" defer></script>
-</head>
-<body>
-    <div class="header"><h2>Tic Tac Toe</h2></div>
-    <div class="content">
-        <div class="game-prompts"> X </div>
-        <div class="game-space"></div>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Tic Tac Toe</title>
+		<link rel="stylesheet" href="style.css" />
+		<script src="./script.js" defer></script>
+	</head>
+	<body>
+		<div class="header"><h2>Tic Tac Toe</h2></div>
+		<div class="content">
+			<div class="game-prompts">
+				<form id="form" class="form">
+					<div>
+						<label for="p1_name">player 1: </label>
+						<input
+							type="text"
+							id="p1_name"
+							placeholder="Enter a Name"
+							required
+						/>
+					</div>
+					<div>
+						<label for="p2_name">player 2: </label>
+						<input
+							type="text"
+							id="p2_name"
+							placeholder="Enter a Name"
+							required
+						/>
+					</div>
+					<button id="submit" class="submit-button" type="submit">
+						start game
+					</button>
+				</form>
+			</div>
+			<div class="game-space"></div>
+		</div>
+	</body>
 </html>
