--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 							required
 						/>
 					</div>
-					<button id="submit" class="submit-button" type="submit">
-						start game
-					</button>
+					<div class="buttons">
+						<button id="submit" class="button" type="submit">start game</button>
+						<button id="restart" class="button" type="button">restart</button>
+					</div>
 				</form>
 			</div>
 			<div class="game-space"></div>
