Add full game functionality

--- a/index.html
+++ b/index.html
@@ -13,23 +13,29 @@
 		<div class="content">
 			<div class="game-prompts">
 				<form id="form" class="form">
-					<div>
-						<label for="p1_name">player 1: </label>
-						<input
-							type="text"
-							id="p1_name"
-							placeholder="Enter a Name"
-							required
-						/>
+					<div class="input-div" id="player_1_div">
+						<div>
+							<label for="p1_name">player 1: </label>
+							<input
+								type="text"
+								id="p1_name"
+								placeholder="Enter a Name"
+								required
+							/>
+						</div>
+						<span></span>
 					</div>
-					<div>
-						<label for="p2_name">player 2: </label>
-						<input
-							type="text"
-							id="p2_name"
-							placeholder="Enter a Name"
-							required
-						/>
+					<div class="input-div" id="player_2_div">
+						<div>
+							<label for="p2_name">player 2: </label>
+							<input
+								type="text"
+								id="p2_name"
+								placeholder="Enter a Name"
+								required
+							/>
+						</div>
+						<span></span>
 					</div>
 					<div class="buttons">
 						<button id="submit" class="button" type="submit">start game</button>
